Changelog
=========


2.7.4 (unreleased)
------------------

- Support timezones. [jone]


2.7.3 (2016-09-26)
------------------

- Publish layout property on plone root. But do not touch other properties.
  [mathias.leimgruber]


2.7.2 (2016-08-16)
------------------

- Implement ftw.simplelayout block properties support.
  Allow setting a different view name.
  [mathias.leimgruber]


2.7.1 (2016-07-26)
------------------

- Fix error when publishing DX relation with no target. [jone]


2.7.0 (2016-03-30)
------------------

- Add data collector for Products.PloneFormGen fields.
  [elioschmutz]

- Add data collector for ftw.servicenavigation data. [jone]


2.6.0 (2015-12-23)
------------------

- Blocks of ftw.contentpage will no longer published directly
  after deleting.
  Backport for ftw.contentpage of functionality provided for ftw.simplelayout:
  [elioschmutz]

- Publish visible state on portlets.
  [lknoepfel]


2.5.0 (2015-09-30)
------------------

- Prevent "ValueError: Description must be unicode." for dexterity objects.
  [jone]

- Add support for PersistentList and PersistentMapping in decode_for_json-utility.
  [elioschmutz, mbaechtold]

- Drop Plone 4.2 support.
  [jone]

- Add support for portlet assignment classes which are not named "Assignment".
  [jone]

- Add ftw.simplelayout support (page and block states).
  [jone]

- Keep tuple / set types when sending data.
  [jone]

- Support dexterity relations.
  [jone]


2.4.1 (2014-12-02)
------------------

- BugFix in property adapter: Setting a property can raise a AttributeError
  if the content type influence the property behavior.
  Example see https://github.com/seantis/seantis.dir.contacts/blob/a0360a35e41afb1a8e0fa4ff553b423e0f731eee/seantis/dir/contacts/contact.py#L83
  [mathias.leimgruber]

2.4.0 (2014-02-04)
------------------

- plonetheme.onegov: Support custom styles.
  [mathias.leimgruber]

- plone.app.collection: Implement publishing the query.
  [mathias.leimgruber]

