@@ -202,4 +202,13 @@
             name="ftw.servicenavigation" />
     </configure>
 
+    <!-- plone.app.event 1.1.x -->
+    <configure zcml:condition="installed plone.app.event">
+        <adapter
+            for="plone.app.event.dx.interfaces.IDXEvent"
+            provides="ftw.publisher.core.interfaces.IDataCollector"
+            factory=".plone_app_event.FixEventTimezones"
+            name="zzz_plone_app_event_fix_timezones" />
+    </configure>
+
 </configure>
